fix: log when fragmentiser property doesn't exist